fix start errors and publish

--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
     "test": "vitest --environment jsdom",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d docs"
-  }
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.28",
-    "tailwindcss": "^4.4.7",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.4.2",
     "vite": "^5.2.2",
-    "vitest": "^1.0.0",
-    "gh-pages": "^5.0.0"
+    "vitest": "^1.0.0"
   }
 }
